[package]
name = "checker"
version = "0.1.0"
authors = ["Max Morrow <max@iconic.com.au>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.7", features = ["json"]}
http = "0.2.1"
tokio = { version = "0.2.22", features = ["full"] }
console = "0.12.0"
json = "0.12.4"
serde = "1.0.115"